--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
+    "react-simple-star-rating": "^5.1.7",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
